<resources>
    <string name="app_name">ProjectUp Mobile</string>
    <string name="btnLogin_string">Login</string>
    <string name="titulo_HomeActivity">Eventos</string>
    <string name="title_activity_navegation">NavegationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_name">Android Studio</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Eventos</string>
    <string name="menu_gallery">Drive</string>
    <string name="menu_slideshow">Wiki</string>
    <string name="tituloP_evento">Eventos</string>

    <string name="title_activity_splash">Splash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hint_event_name">Nombre Evento</string>
    <string name="date_start_event">Fecha Inicio</string>
    <string name="date_end_event">Fecha Cierre</string>
    <string name="create_botton_event">Crear</string>
    <string name="botton_permisos_scan"> Escanear Código</string>

</resources>