<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="co.edu.sena.projectupmobile.ui.evento.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="co.edu.sena.projectupmobile.ui.drive.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="co.edu.sena.projectupmobile.ui.wiki.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/homeActivity"
        android:name="co.edu.sena.projectupmobile.HomeActivity"
        android:label="activity_home"
        tools:layout="@layout/activity_home" />
</navigation>