<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".crearEvento_Activity">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_botton_event"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEndInputLayout"
        app:layout_constraintVertical_bias="0.9"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEventInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/dateStartInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/icons"
            android:hint="@string/hint_event_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="25dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateStartInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEventInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/icons"
            android:hint="@string/date_start_event"
            android:inputType="date"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/primary_text"
            android:textSize="25dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateEndInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateStartInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/icons"
            android:hint="@string/date_end_event"
            android:inputType="date"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/primary_text"
            android:textSize="25dp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>